Add "zoom" next to flash talk schedule listings

--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -24,9 +24,9 @@
     - name: "10:00 - 10:15 Logistics and introduction to [group exercise](https://compsocialscience.github.io/summer-institute/2021/materials/day2-digital-trace-data/Group_Exercise_Day_2.html) (*Zoom*)"
     - name: "10:15 - 11:30 Identify a Research Question with Digital Trace Data (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 12:15 Flash talk by Marcos Gallo"
-    - name: "12:15 - 12:30 Flash talk by Katherine Keith"
-    - name: "12:30 - 12:45 Flash talk by Killian McLoughlin"
+    - name: "12:00 - 12:15 Flash talk by Marcos Gallo (*Zoom*)"
+    - name: "12:15 - 12:30 Flash talk by Katherine Keith (*Zoom*)"
+    - name: "12:30 - 12:45 Flash talk by Killian McLoughlin (*Zoom*)"
     - name: "12:45 - 1:00 Buffer time for flash talks"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 2:30 Develop a Sampling Frame (*Zoom*)"
@@ -40,8 +40,8 @@
     - name: "10:00 - 10:15 Logistics and introduction to [group exercise](https://compsocialscience.github.io/summer-institute/2021/materials/day3-text-analysis/Group-Exercise-Day-3.html) (*Zoom*)"
     - name: "10:15 - 11:30 Extract Features from Trump Tweets (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 12:15 Flash talk by Tamara van der Does"
-    - name: "12:15 - 12:30 Flash talk by Yash Tadimalla"
+    - name: "12:00 - 12:15 Flash talk by Tamara van der Does (*Zoom*)"
+    - name: "12:15 - 12:30 Flash talk by Yash Tadimalla (*Zoom*)"
     - name: "12:30 - 1:00 Buffer time for flash talks"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:30 Predict Features of Tweets associated with Retweets and Produce Visualization (*Zoom*)"
@@ -54,9 +54,9 @@
     - name: "10:15 - 10:30 [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf), [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_participants.md); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_instructor.md) (*Zoom*)"
     - name: "10:30 - 11:30 Morning group exercise (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 12:15 Flash talk by Nozomi Nakajima"
-    - name: "12:15 - 12:30 Flash talk by Carolina Coimbra Vieira"
-    - name: "12:30 - 12:45 Flash talk by Andrey Indukaev"
+    - name: "12:00 - 12:15 Flash talk by Nozomi Nakajima (*Zoom*)"
+    - name: "12:15 - 12:30 Flash talk by Carolina Coimbra Vieira (*Zoom*)"
+    - name: "12:30 - 12:45 Flash talk by Andrey Indukaev (*Zoom*)"
     - name: "12:45 - 1:00 Buffer time for flash talks"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Afternoon group exercise (*Zoom*)"
@@ -71,8 +71,8 @@
     - name: "10:15 - 10:30 Introduction to the group exercise [Video](https://www.youtube.com/watch?v=ZI95vV7Co38) [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.pdf) (*Zoom*)"
     - name: "10:30 - 11:30 Participate in the Fragile Families Challenge actvity [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#lesson-plan-for-participants); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_instructor.md#lesson-plan-for-instructors) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 12:15 Flash talk by Mario Molina"
-    - name: "12:15 - 12:30 Flash talk by Luca Maria Pesando, 'Harnessing the Potential of Online Searches for Understanding the Impact of COVID-19 on Intimate Partner Violence in Italy'"
+    - name: "12:00 - 12:15 Flash talk by Mario Molina (*Zoom*)"
+    - name: "12:15 - 12:30 Flash talk by Luca Maria Pesando, "Harnessing the Potential of Online Searches for Understanding the Impact of COVID-19 on Intimate Partner Violence in Italy" (*Zoom*)"
     - name: "12:30 - 1:00 Buffer time for flash talks"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Continue participating in the Fragile Families Challenge activity (*Zoom*)"
