--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -69,7 +69,7 @@
     - name: "10:30 - 11:30 Participate in the Fragile Families Challenge actvity [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#lesson-plan-for-participants); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_instructor.md#lesson-plan-for-instructors) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 12:15 Flash talk by Mario Molina (*Zoom*)"
-    - name: "12:15 - 12:30 Flash talk by Luca Maria Pesando, "Harnessing the Potential of Online Searches for Understanding the Impact of COVID-19 on Intimate Partner Violence in Italy" (*Zoom*)"
+    - name: "12:15 - 12:30 Flash talk by Luca Maria Pesando, 'Harnessing the Potential of Online Searches for Understanding the Impact of COVID-19 on Intimate Partner Violence in Italy' (*Zoom*)"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Continue participating in the Fragile Families Challenge activity (*Zoom*)"
     - name: "3:00 - 3:15 Break"
