--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -3,9 +3,9 @@
 - date: 2021-06-12
   name: Praxis to Power Pre-Institute
   events: 
-    - name: "10:00 - 11:45 Welcome, Praxis to Power Day 1 Introduction and logistics (*Zoom*)"
+    - name: "10:00 - 11:45 Welcome, Praxis to Power Day 1 Introduction and logistics (*Zoom*) (you have received the link over email)"
     - name: "11:45 - 12:00 Break"
-    - name: '12:00 - 1:00 "Personal Experiences of African Americans in the Academy" (*Zoom*) 
+    - name: '12:00 - 1:00 "Personal Experiences of African Americans in the Academy" (*Zoom*) (you have received the link over email) 
     
      - Terri Adams-Fuller, Ph.D., Faculty Co-Sponsor, Associate Professor, Department  of Sociology and Anthropology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology, Howard University
      
@@ -16,19 +16,19 @@
      - Bahiyyah Muhammad, Ph.D., Faculty Co-Sponsor, Associate Professor, Department of Sociology and Anthropology, Howard University'
      
     - name: "1:00 - 1:15 Break" 
-    - name: '1:15 - 1:45 "Choosing Self-Care in a Hostile World" (*Zoom*) (slides) (handout) (video)
+    - name: '1:15 - 1:45 "Choosing Self-Care in a Hostile World" (*Zoom*) (you have received the link over email) (slides) (handout) (video)
     
       - Meckell Milburn, MA, NBC-HWC, CWP, Revolutionary Healing'
       
     - name: "1:45 - 2:00 Break"
-    - name: '2:00 - 5:00 "Making Computational Methods Accessible: R big picture (tidyverse) + data wrangling" (*Zoom*) (video) [(Workshop materials)](https://github.com/jaeyk/sicss-howard-r-boot-camp)
+    - name: '2:00 - 5:00 "Making Computational Methods Accessible: R big picture (tidyverse) + data wrangling" (*Zoom*) (you have received the link over email) (video) [(Workshop materials)](https://github.com/jaeyk/sicss-howard-r-boot-camp)
     
       - Jae Yeon Kim, Ph.D., Assistant Research Scholar, SNF Agora Institute, Johns Hopkins University'
 
 - date: 2021-06-13
   name: Praxis to Power Pre-Institute
   events:
-    - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics (*Zoom*) (video)"
+    - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics (*Zoom*) (you have received the link over email) (video)"
     - name: "11:00 - 2:00 Open Office Hours, or SICSS-Howard/Mathematica Exclusive Content Review (on your own), or Pre-Arrival Material Review (on your own)
     
     
@@ -78,12 +78,12 @@
               
                 - Uncovering New Keys to Countering Anti-Black Racism and Inequity Using Computational Social Science, [SAGE Ocean blog](https://ocean.sagepub.com/blog/diversity/uncovering-new-keys-to-countering-anti-black-racism-and-inequity-using-computational-social-science)"
              
-    - name: '2:00 - 5:00 "Making Computational Methods Accessible: data visualization and teaching CSS" (*Zoom*) [Workshop materials](https://github.com/jaeyk/sicss-howard-r-boot-camp)
+    - name: '2:00 - 5:00 "Making Computational Methods Accessible: data visualization and teaching CSS" (*Zoom*) (you have received the link over email) [Workshop materials](https://github.com/jaeyk/sicss-howard-r-boot-camp)
     
       - Jae Yeon Kim, Ph.D., Assistant Research Scholar, SNF Agora Institute, Johns Hopkins University'
       
     - name: "5:00 - 5:15 Break"
-    - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary: President Wayne A.I. Frederick, Howard University (*Zoom*) (video)"
+    - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary: President Wayne A.I. Frederick, Howard University (*Zoom*) (you have received the link over email) (video)"
 
     
 - date: 2021-06-14
