--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -10,7 +10,7 @@
     - name: "8:00 - 8:25 Introduction and logistics"
     - name: "8:30 - 9:25 Speed dating"
     - name: "9:30 - 10:55 Reading group: Introduction to networks"
-    - name: "21:00 - 22:30 Sandy Pentland speaks at SICSS Beijing (Topic: Idea Flow and Economic Growth) + Q&A (talk open to the public; registration link TBA)"
+    - name: "21:00 - 22:30 Sandy Pentland speaks at SICSS Beijing + Q&A (Topic: Idea Flow and Economic Growth; talk open to the public; [zoom registration link](https://mit.zoom.us/webinar/register/WN_B_ZCsGy5SRyn4_2Ue_PWig)"
 
 - date: 2021-06-15
   name: ""
