--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -77,4 +77,5 @@
 - date: 2021-06-25
   name: ""
   events:
-    - name: "8:00 - 11:00 Group project presentation + closing"
+    - name: "8:00 - 11:00 Group project presentation"
+    - name: "21:00 - 23:00 Shan Huang speaks at SICSS Beijing + 1:1 meetings (talk open to participants only)"
