update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -7,13 +7,13 @@
     - name: "11:45 - 12:00 Break"
     - name: '12:00 - 1:00 "Personal Experiences of African Americans in the Academy" (*Zoom*) (you have received the link over email) 
     
-     - Terri Adams-Fuller, Ph.D., Faculty Co-Sponsor, Associate Professor, Department  of Sociology and Anthropology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology, Howard University
+     - Terri Adams-Fuller, Ph.D., Professor, Department  of Sociology and Anthropology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology, Howard University
      
      - Britany Gatewood, Ph.D., Adjunct Lecturer, Department of Sociology, Georgetown University
      
      - Brandon Hogan, Ph.D., Associate Professor, Department of Sociology, Howard University
      
-     - Bahiyyah Muhammad, Ph.D., Faculty Co-Sponsor, Associate Professor, Department of Sociology and Anthropology, Howard University'
+     - Bahiyyah Muhammad, Ph.D., Associate Professor, Department of Sociology and Anthropology, Howard University'
      
     - name: "1:00 - 1:15 Break" 
     - name: '1:15 - 1:45 "Choosing Self-Care in a Hostile World" (*Zoom*) (you have received the link over email) (slides) (handout) (video)
