update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -21,7 +21,7 @@
       - Meckell Milburn, MA, NBC-HWC, CWP, Revolutionary Healing'
       
     - name: "1:45 - 2:00 Break"
-    - name: '2:00 - 5:00 "Making Computational Methods Accessible: R big picture (tidyverse) + data wrangling" (*Zoom*) (you have received the link over email) (video) [(Workshop materials)](https://github.com/jaeyk/sicss-howard-r-boot-camp)
+    - name: '2:00 - 5:00 "Making Computational Methods Accessible: R big picture (tidyverse) + data wrangling" (*Zoom*) (you have received the link over email) (video) [(Workshop materials)](https://github.com/jaeyk/sicss-howard-r-boot-camp) [(article)](https://osf.io/preprints/socarxiv/pf7n6/)
     
       - Jae Yeon Kim, Ph.D., Assistant Research Scholar, SNF Agora Institute, Johns Hopkins University'
 
@@ -78,7 +78,7 @@
               
                 - Uncovering New Keys to Countering Anti-Black Racism and Inequity Using Computational Social Science, [SAGE Ocean blog](https://ocean.sagepub.com/blog/diversity/uncovering-new-keys-to-countering-anti-black-racism-and-inequity-using-computational-social-science)"
              
-    - name: '2:00 - 5:00 "Making Computational Methods Accessible: data visualization and teaching CSS" (*Zoom*) (you have received the link over email) [Workshop materials](https://github.com/jaeyk/sicss-howard-r-boot-camp)
+    - name: '2:00 - 5:00 "Making Computational Methods Accessible: data visualization and teaching CSS" (*Zoom*) (you have received the link over email) [(Workshop materials)](https://github.com/jaeyk/sicss-howard-r-boot-camp) [(article)](https://osf.io/preprints/socarxiv/pf7n6/)
     
       - Jae Yeon Kim, Ph.D., Assistant Research Scholar, SNF Agora Institute, Johns Hopkins University'
       
