update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -58,7 +58,7 @@
               
                 - Bahiyyah Muhammad, Ph.D., Faculty Co-Sponsor & Associate Professor, Department of Sociology and Criminology, Howard University [(video)](https://youtu.be/2WRhoRgmvvc)
               
-                - Calvin Hadley, Event Co-Sponsor & Senior Advisor for Strategic Initiatives, Office of the President, Howard University [(video)](https://youtu.be/y-dp19EpEcU)]
+                - Calvin Hadley, Event Co-Sponsor & Senior Advisor for Strategic Initiatives, Office of the President, Howard University [(video)](https://youtu.be/y-dp19EpEcU)
               
                 - Akira Bell,  Event Co-Sponsor & Senior Vice President; Chief Information Officer, Mathematica [(video)](https://youtu.be/BVRDqmDMT-0)
               
