--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -24,6 +24,10 @@
     - name: '2:00 - 5:00 "Making Computational Methods Accessible: R big picture (tidyverse) + data wrangling" (*Zoom*) (you have received the link over email) (video) [(Workshop materials)](https://github.com/jaeyk/sicss-howard-r-boot-camp) [(article)](https://osf.io/preprints/socarxiv/pf7n6/)
     
       - Jae Yeon Kim, Ph.D., Assistant Research Scholar, SNF Agora Institute, Johns Hopkins University'
+     
+    - name: "5:00 - 5:15 Debrief and Logistics (*Zoom*)"
+
+
 
 - date: 2021-06-13
   name: Praxis to Power Pre-Institute
@@ -82,7 +86,8 @@
     
       - Jae Yeon Kim, Ph.D., Assistant Research Scholar, SNF Agora Institute, Johns Hopkins University'
       
-    - name: "5:00 - 5:15 Break"
+    - name: "5:00 - 5:05 Debrief and Logistics"
+    - name: "5:05 - 5:15 Break"
     - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary: President Wayne A.I. Frederick, Howard University (*Zoom*) (you have received the link over email) (video)"
 
     
