--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -83,7 +83,7 @@
   events:
     - name: "13.00 - 14.00 Small group lunches (*Zoom*)" 
     - name: "16.30 - 17.30 Office Hours (*Zoom*)"
-    - name: "18.00 - 19.30 Panel discussion on the (many) paths to computational social science research in law (*Zoom*)"
+    - name: "18.00 - 19.30 Panel discussion on the (many) paths to computational social science research in law with Masha Medvedeva, Jens Frankenreiter, Thales Bertaglia (*Zoom*)"
 
 - date: 2021-06-24
   name: "<b>Work on group projects</b>"
