update howard people page

--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -243,6 +243,6 @@ teaching_assistants:
     <img class="SICSS-Howard/Mathematica TAs" src="/assets/images/HowardMathematicaTAs.jpeg" />
       
 event_staff:
-  title: Event Staff
+  title: Event Staff (Coleman Research Lab)
     <img class="SICSS-Howard/Mathematica Event Staff" src="/assets/images/HowardEventStaff.jpeg" />
     
