--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -3,9 +3,9 @@
 - date: 2021-06-12
   name: Praxis to Power Pre-Institute
   events: 
-    - name: "10:00 - 11:45 Welcome, Praxis to Power Day 1 Introduction and logistics (*Zoom*) (you have received the link over email)"
+    - name: "10:00 - 11:45 Welcome, Praxis to Power Day 1 Introduction and logistics (*Zoom*)"
     - name: "11:45 - 12:00 Break"
-    - name: '12:00 - 1:00 "Personal Experiences of African Americans in the Academy" (*Zoom*) (you have received the link over email) 
+    - name: '12:00 - 1:00 "Personal Experiences of African Americans in the Academy" (*Zoom*) 
     
      - Terri Adams-Fuller, Ph.D., Professor, Department  of Sociology and Anthropology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology, Howard University
      
@@ -16,12 +16,12 @@
      - Bahiyyah Muhammad, Ph.D., Associate Professor, Department of Sociology and Anthropology, Howard University'
      
     - name: "1:00 - 1:15 Break" 
-    - name: '1:15 - 1:45 "Choosing Self-Care in a Hostile World" (*Zoom*) (you have received the link over email) (slides) (handout) (video)
+    - name: '1:15 - 1:45 "Choosing Self-Care in a Hostile World" (*Zoom*) [(handout)](https://drive.google.com/file/d/1eMN39wHBZyWS-yTlgaZ0gpbiH7FuBYWc/view?usp=sharing) (video)
     
       - Meckell Milburn, MA, NBC-HWC, CWP, Revolutionary Healing'
       
     - name: "1:45 - 2:00 Break"
-    - name: '2:00 - 5:00 "Making Computational Methods Accessible: R big picture (tidyverse) + data wrangling" (*Zoom*) (you have received the link over email) (video) [(Workshop materials)](https://github.com/jaeyk/sicss-howard-r-boot-camp) [(article)](https://osf.io/preprints/socarxiv/pf7n6/)
+    - name: '2:00 - 5:00 "Making Computational Methods Accessible: R big picture (tidyverse) + data wrangling" (*Zoom*) (video) [(Workshop materials)](https://github.com/jaeyk/sicss-howard-r-boot-camp) [(article)](https://osf.io/preprints/socarxiv/pf7n6/)
     
       - Jae Yeon Kim, Ph.D., Assistant Research Scholar, SNF Agora Institute, Johns Hopkins University'
      
