--- a/_data/2021/london/schedule.yml
+++ b/_data/2021/london/schedule.yml
@@ -1,5 +1,5 @@
 - date: All times are in UK local (BST)
-- date: More details coming soon!
+- date: Location for all events is Joshua's university zoom link (see email)
 
 - date: 2021-06-13
   events:
@@ -39,7 +39,6 @@
     - name: "10:00 - 12:00 Introduction and group activity (Faculty leader: Mike Yeomans) (*Zoom*)"
     - name: "12:00 - 1:00 Group lunches (optional) (*Zoom*)"
     - name: "1:00 - 4:00 Group activity and wrap-up"    
-    - name: "4:00 - 6:00 Guest Speaker: Ken Benoit"
 
 - date: 2021-06-17
   name: "Surveys in the Digital Age"
