--- a/_data/2021/hse/participants.yml
+++ b/_data/2021/hse/participants.yml
@@ -91,7 +91,7 @@
 - name: Olga Vilkova
   image: /assets/images/Vilkova.jpg
   bio: "Olga Vilkova is currently pursuing a PhD in Economic Sociology at Higher School of Economics, Russia. Her research interests lie in the field of inequality and professional success on online labor markets. Her studies are based on mixed approach where conventional sociological methods are balanced with computational techniques (web-scraping)."
-  website: Linkedin.com/pub/olga-vilkova/98/602/329
+  website: http://linkedin.com/pub/olga-vilkova/98/602/329
 
 - name: Nan Zhang
   image: /assets/images/NanZhang.jpg
