--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -24,20 +24,20 @@
   events:
     - name: "8:30 - 9:25 Speed dating"
     - name: "9:30 - 10:55 Reading group: Social contagion and collective intelligence"
-    - name: "21:00 - 23:00 Nynke Niezink speaks at SICSS Beijing + 1:1 meetings; Topic: Modeling network dynamics and dynamics on networks; Talk open to the public; registration link TBA"
+    - name: "21:00 - 23:00 Nynke Niezink speaks at SICSS Beijing + 1:1 meetings; Topic: Modeling network dynamics and dynamics on networks; Talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_jH7oTHETT3yWdgAhckh5JA)"
 
 - date: 2021-06-17
   name: ""
   events:
     - name: "8:30 - 9:25 Speed dating"
     - name: "9:30 - 10:55 Reading group: Misinformation and polorization"
-    - name: "21:00 - 23:00 Chris Bail speaks at SICSS Beijing (Breaking the Social Media Prism: How to Make our Platforms Less Polarizing) + 1:1 meetings (talk open to the public; registration link TBA)"
+    - name: "21:00 - 23:00 Chris Bail speaks at SICSS Beijing (Breaking the Social Media Prism: How to Make our Platforms Less Polarizing) + 1:1 meetings (talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_3hSB-ET-TyW5VlbhnoHphw))"
     
 - date: 2021-06-18
   name: ""
   events:
     - name: "8:30 - 9:55 Group project research idea pitch"
-    - name: "10:00 - 11:55 Zhiyuan Liu speaks at SICSS Beijing + 1:1 meetings (talk open to the public; registration link TBA)"
+    - name: "10:00 - 11:55 Zhiyuan Liu speaks at SICSS Beijing + 1:1 meetings (talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_-XzA_Z4mSPWzvLceKPUlxw)"
     - name: "21:00 - 23:00 Groups formed for the second week research team projects"
 
 - date: 2021-06-19
